changes from class moved to php

--- a/patshkowski.aj/styleguide/index.html
+++ b/patshkowski.aj/styleguide/index.html
@@ -9,6 +9,7 @@
 
 	<link rel="stylesheet" href="lib/css/styleguide.css">
 	<link rel="stylesheet" href="lib/css/gridsystem.css">
+	<link rel="stylesheet" href="css/storetheme.css">
 	
 </head>
 
@@ -96,6 +97,27 @@
          <div style="background-color:var(--color-neutral-light)">Color Neutral Light</div>
          <div style="background-color:var(--color-neutral-medium)">Color Neutral Medium</div>
          <div style="background-color:var(--color-neutral-dark)">Color Neutral Dark</div>
+
+         <div class="grid">
+            <div class="col-xs-12 col-md-2">
+               <div class="colorblock" style="background-color:var(--color-store-blue)">color-store-blue</div>
+            </div>
+            <div class="col-xs-12 col-md-2">
+               <div class="colorblock" style="background-color:var(--color-store-aqua)">color-store-aqua</div>
+            </div>
+            <div class="col-xs-12 col-md-2">
+               <div class="colorblock" style="background-color:var(--color-store-green)">color-store-green</div>
+            </div>
+            <div class="col-xs-12 col-md-2">
+               <div class="colorblock" style="background-color:var(--color-store-yellow)">color-store-yellow</div>
+            </div>
+            <div class="col-xs-12 col-md-2">
+               <div class="colorblock" style="background-color:var(--color-store-orange)">color-store-orange</div>
+            </div>
+            <div class="col-xs-12 col-md-2">
+               <div class="colorblock" style="background-color:var(--color-store-red)">color-store-red</div>
+            </div>
+         </div>
 
        
       </div>
@@ -214,6 +236,7 @@
 	         <button class="button large">Large</button>
 	         <button class="button xlarge">X-Large</button>
 	     </div>
+
       </div>
    </div>
 
@@ -261,6 +284,28 @@
             </div>
             <div class="col-xs-12 col-md-3">
                <div class="well">col-xs-12 col-md-3</div>
+            </div>
+         </div>
+
+         <h4>6 Column Responsive</h4>
+         <div class="grid">
+            <div class="col-xs-12 col-md-1">
+               <div class="well">col-xs-12 col-md-6</div>
+            </div>
+            <div class="col-xs-12 col-md-1">
+               <div class="well">col-xs-12 col-md-6</div>
+            </div>
+            <div class="col-xs-12 col-md-1">
+               <div class="well">col-xs-12 col-md-6</div>
+            </div>
+            <div class="col-xs-12 col-md-1">
+               <div class="well">col-xs-12 col-md-6</div>
+            </div>
+            <div class="col-xs-12 col-md-1">
+               <div class="well">col-xs-12 col-md-6</div>
+            </div>
+            <div class="col-xs-12 col-md-1">
+               <div class="well">col-xs-12 col-md-6</div>
             </div>
          </div>
 
@@ -484,13 +529,13 @@
 
 
 
-
+<!-- 
     <div class="container">
       <div class="card soft">
          <h3>Breadcrumb Nav</h3>
          <script>makeNav(" crumbs")</script>
       </div>
-   </div>
+   </div> -->
 
 
 <script>
@@ -638,18 +683,8 @@ const makeTable = (classes='') => {
             </div>
          </form>
 
-         <hr>
 
-         <h3>Form Select</h3>
-
-         <div class="form-select">
-            <select>
-               <option value="bird">bird</option>
-               <option value="dog">dog</option>
-               <option value="cat">cat</option>
-               <option value="horse">horse</option>
-            </select>
-         </div>
+        
 
       </div>
    </div>
