added skeleton for php sites

--- a/patshkowski.aj/styleguide/index.html
+++ b/patshkowski.aj/styleguide/index.html
@@ -206,7 +206,7 @@
       <div class="card soft">
          <h2>Buttons</h2>
          <div class="section">
-	         <button class="button">Button</button>
+	         <button class="button light">Button</button>
 	         <button class="button dark">Dark Button</button>
 	         <button class="button medium">Medium Button</button>
 	         <button class="button light">Light Button</button>
@@ -219,22 +219,22 @@
 	         <button class="btn button round">Hover Round Button</button>
 	     </div>
 	     <div class="section">
-	         <button class="button round">Round</button>
-	         <button class="button round-large">Rounder</button>
-	         <button class="button round-xlarge">Rounderer</button>
-	         <button class="button round-xxlarge">Rounderest</button>
-	         <button class="button large circle xlarge">+</button>
+	         <button class="btn round light">Round</button>
+	         <button class="btn round-large light">Rounder</button>
+	         <button class="btn round-xlarge light">Rounderer</button>
+	         <button class="btn round-xxlarge light">Rounderest</button>
+	         <button class="btn large circle xlarge light">+</button>
 	     </div>
 	     <div class="section">
-	         <button class="button block">Long Button</button>
-	         <button class="btn block">Long Button</button>
+	         <button class="button block dark">Long Button</button>
+	         <button class="btn block medium">Long Button</button>
 	     </div>
 	    <div class="section">
-	         <button class="button tiny">Tiny</button>
-	         <button class="button small">Small</button>
-	         <button class="button medium">Medium</button>
-	         <button class="button large">Large</button>
-	         <button class="button xlarge">X-Large</button>
+	         <button class="button tiny light">Tiny</button>
+	         <button class="button small light">Small</button>
+	         <button class="button medium light">Medium</button>
+	         <button class="button large light">Large</button>
+	         <button class="button xlarge light">X-Large</button>
 	     </div>
 
       </div>
@@ -651,6 +651,23 @@ const makeTable = (classes='') => {
 
          <h3>Other Buttons</h3>
          <button type="button" class="form-button sell">Button</button>
+
+         <div class="section">
+            <button class="btn round red">Red Button</button>
+            <button class="btn round orange">Orange Button</button>
+            <button class="btn round yellow">Yellow Button</button>
+            <button class="btn round green">Green Button</button>
+            <button class="btn round aqua">Aqua Button</button>
+            <button class="btn round blue">Blue Button</button>
+         </div>
+
+         <div class="section">
+            <button class="btn round rainbow">Rainbow Button</button>
+            <button class="button round reds">Reds Button</button>
+            <button class="button round blues">Blues Button</button>
+         </div>
+         
+
 
          <h3>Other Layouts</h3>
 
