--- a/patshkowski.aj/styleguide/index.html
+++ b/patshkowski.aj/styleguide/index.html
@@ -496,6 +496,9 @@
             </ul>
          </nav>
 
+         <h3>Pills Nav</h3>
+         <script>makeNav("nav pills")</script>
+
 
 
          <h3>Navbar</h3>
