--- a/patshkowski.aj/styleguide/index.html
+++ b/patshkowski.aj/styleguide/index.html
@@ -454,6 +454,32 @@
             </ul>
          </nav>
 
+         <h3>Footer</h3>
+            <footer class="grid gap responsive-footer">
+   <div class="col-xs-12">
+      <div class="container">
+      <img class="navlogo" src="images/Logo.png">
+         <p class="footer-links">
+            <a href="index.php">Home</a>
+            <a href="product_list">Products</a>
+            <a href="product_cart">Cart</a>
+            <a href="admin/index.php">Admin</a>
+         </p>
+
+         <p class="copyright">&#169; AJ Patshkowski 2021</p>
+      </div>
+
+   <div class="footer-right">
+      <div class="footer-social">
+         <a href="#"><img class="social" src="images/facebook.svg"></a>
+         <a href="#"><img class="social" src="images/twitter.png"></a>
+         <a href="#"><img class="social" src="images/instagram.png"></a>
+      </div>
+   </div>
+
+   </div>
+</footer>
+
          <h3>Pills Nav</h3>
          <script>makeNav("nav pills")</script>
 
@@ -479,6 +505,7 @@
          </nav>
       </div>
    </header>
+
    
 
 
