--- a/patshkowski.aj/styleguide/index.html
+++ b/patshkowski.aj/styleguide/index.html
@@ -317,6 +317,45 @@
       <div class="card soft">
          <h2>Card</h2>
 
+         <h3>Featured Cards</h3>
+         <div class="grid gap container">
+   <div class="col-xs-12 col-lg-4">
+      <div class="container">
+         <div class="card featured">
+            <div class="title"><h2>Bont Park Star</h2></div>
+            <div class="image"><img src="images/store/bontparkpink.png"></div>
+
+            <a href="product_item.php?id=2" class="display-inline-flex"><button class="btn rainbow round">Learn More</button></a>
+         </div>
+      </div>
+   </div>
+
+   <div class="col-xs-12 col-lg-4">
+      <div class="container">
+         <div class="card featured">
+            <div class="title"><h2>Riedell Dart Ombré</h2></div>
+            <div class="image"><img src="images/store/dartgreen.png"></div>
+
+            <a href="product_item.php?id=4" class="display-inline-flex"><button class="btn rainbow round">Learn More</button></a>
+         </div>
+      </div>
+   </div>
+
+   <div class="col-xs-12 col-lg-4">
+      <div class="container">
+         <div class="card featured">
+            <div class="title"><h2>Antik Jet Carbon</h2></div>
+            <div class="image"><img src="images/store/antikjet.png"></div>
+
+            <a href="product_item.php?id=5" class="display-inline-flex"><button class="btn rainbow round">Learn More</button></a>
+         </div>
+      </div>
+   </div>
+</div>
+
+         <h3>Soft Rainbow Card</h3>
+         <div class="card rainbow soft">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus error labore porro. Rem, ipsa fuga soluta nesciunt recusandae iusto minus.</div>
+
          <h3>Standard Card</h3>
          <div class="card">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus error labore porro. Rem, ipsa fuga soluta nesciunt recusandae iusto minus.</div>
 
@@ -337,9 +376,6 @@
 
          <h3>Soft Dark Card</h3>
          <div class="card dark soft">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus error labore porro. Rem, ipsa fuga soluta nesciunt recusandae iusto minus.</div>
-
-         <h3>Soft Rainbow Card</h3>
-         <div class="card rainbow soft">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus error labore porro. Rem, ipsa fuga soluta nesciunt recusandae iusto minus.</div>
 
          <h3>Soft flat Card</h3>
          <div class="card flat soft">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus error labore porro. Rem, ipsa fuga soluta nesciunt recusandae iusto minus.</div>
@@ -453,35 +489,7 @@
                <li><a href="#">Link 4</a></li>
             </ul>
          </nav>
-
-         <h3>Footer</h3>
-            <footer class="grid gap responsive-footer">
-   <div class="col-xs-12">
-      <div class="container">
-      <img class="navlogo" src="images/Logo.png">
-         <p class="footer-links">
-            <a href="index.php">Home</a>
-            <a href="product_list">Products</a>
-            <a href="product_cart">Cart</a>
-            <a href="admin/index.php">Admin</a>
-         </p>
-
-         <p class="copyright">&#169; AJ Patshkowski 2021</p>
-      </div>
-
-   <div class="footer-right">
-      <div class="footer-social">
-         <a href="#"><img class="social" src="images/facebook.svg"></a>
-         <a href="#"><img class="social" src="images/twitter.png"></a>
-         <a href="#"><img class="social" src="images/instagram.png"></a>
-      </div>
-   </div>
-
-   </div>
-</footer>
-
-         <h3>Pills Nav</h3>
-         <script>makeNav("nav pills")</script>
+         
 
 
 
